[gd_scene load_steps=3 format=3 uid="uid://0egleja7j75g"]

[ext_resource type="Script" path="res://ui/implant_manager/ImplantSlotDisplay.gd" id="1_mcghk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyapq"]
bg_color = Color(0, 0.164706, 0.164706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ImplantSlotDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(150, 180)
theme_override_styles/panel = SubResource("StyleBoxFlat_vyapq")
script = ExtResource("1_mcghk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SlotName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Slot name here"
horizontal_alignment = 1

[node name="DisplayHolder" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
